# ckanext-dev-theme

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/dev_theme/: plugin.py
ckanext/dev_theme/assets/: script.js  webassets.yml
ckanext/dev_theme/templates/home/: index.html
ckanext/dev_theme/templates/organization/: new_organization_form.html
ckanext/dev_theme/templates/scheming/organization/: group_form.html
ckanext/dev_theme/tests/: test_plugin.py
