[metadata]
name = ckanext-dev-theme
version = 0.0.1
description = Development Extension for CKAN Theme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JVickery-TBS/ckanext-dev-theme
author = Jesse Vickery
author_email = jesse.vickery@tbs-sct.gc.ca
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN Dev

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             dev_theme = ckanext.dev_theme.plugin:DevThemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dev_theme/i18n/ckanext-dev_theme.pot
width = 80

[init_catalog]
domain = ckanext-dev_theme
input_file = ckanext/dev_theme/i18n/ckanext-dev_theme.pot
output_dir = ckanext/dev_theme/i18n

[update_catalog]
domain = ckanext-dev_theme
input_file = ckanext/dev_theme/i18n/ckanext-dev_theme.pot
output_dir = ckanext/dev_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-dev_theme
directory = ckanext/dev_theme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
